# devops-course-starter

./: .dockerignore  .env.template  .env.test  .flake8  .gitignore  DEVLOG.md  Dockerfile  Makefile  README.md  TODO.md  az-webapp-variables.json  az-webapp-variables.json.j2  check-connectivity.sh  docker-compose.yml  execute_pipeline_steps.py  expected.subcheck  on_update.sh  on_update_run.sh  pull_request_template.md  pyproject.toml  submission_check.sh  test.sh  test_dockerignore.sh  test_ui.py  todo.md  with_env.sh
.github/: actions-pipeline.yml  pull_request_template.md
.github/workflows/: build-and-test.yml
architecture/: c4-3.puml
deploy/: Makefile  ansible.cfg  dot-env.j2  hosts.ini  playbook.yml  todoapp.service
deploy-ansible/: hosts.ini
hooks/: pre-commit
module-2/exercise/: .gitignore  TrelloSession.py  requests_proxy_config.py  trellodemo.py  trelloinit.py
module-2/reading/: http-request-user-update.txt
module-2/reading/exercise-marvel-comics/: README.md  mcq.py
module-4/: Makefile  hosts.ini  playbook.yml  todoapp.service
reading/deploy-ansible/: README.md  dot-env.j2  todoapp.service
tests/: integration_test.py  test_dockerignore.sh  test_ui.py  test_view_model.py  words.py
tests/test_data/: board_result.json
todo_app/: ViewModel.py  app.py  flask_config.py  site_trello.json  trello_config.py
todo_app/data/: TrelloSession.py  storage_mongo.py  storage_trello.py
todo_app/templates/: bootstrap.html  index.html  layout.html
util/: clean_docker.sh  j2instantiate.py  trelloinit.py  with_dev_server_running.sh  with_env.sh
(+8 files in other folders)
