[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
Flask = "^2.0.3"
python-dotenv = "^0.14.0"
requests = "^2.28.2"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
pytest-watch = "^4.2.0"
pymongo = "^4.6.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pyflakes = "^3.0.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
